fix: fixed size issues on small and mobile displays

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,7 +153,7 @@ pre {
 }
 
 /* tablet breakpoint */
-@media (min-width:768px) {
+@media (max-width:1023px) {
   .main-grid {
       grid-template-columns: 1fr 1fr;
       grid-template-areas:
@@ -161,6 +161,12 @@ pre {
           'main-content main-content'
           'left-sidebar right-sidebar'
           'footer footer';
+  }
+  .left-sidebar{
+    text-align: center;
+  }
+  .right-sidebar{
+    text-align: center;
   }
 }
 
